# Active-Matter-DEM-Simulation

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: ParticleSystem.h  Physics.h  Screen.h
source/: ParticleSystem.cpp  Physics.cpp  Screen.cpp  main.cpp
